--- a/project/dapo/index.html
+++ b/project/dapo/index.html
@@ -124,7 +124,7 @@
   
 
 
-  <title>Drug Abuse Prevention Officer Program App | Ankit Billa</title>
+  <title>NarcoSoft | Ankit Billa</title>
 
 
 </head>
@@ -318,7 +318,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Drug Abuse Prevention Program Application</h1>
+  <h1>NarcoSoft: A Drug Abuse Prevention Application</h1>
 
   
 
@@ -329,7 +329,7 @@
 
   
   <span class="article-date">
-    Nov 20, 2018
+    Nov 20, 2017
   </span>
   
 
@@ -347,7 +347,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
   <div style="position: relative">
     <img src="/project/dapo/featured.jpg" width="720" height="480" alt="" class="featured-image">
-    <span class="article-header-caption">Drug Abuse Prevention Officer Program : Government of Punjab</span>
+    <span class="article-header-caption">UI showing the current status of a locality (Mohalla)</span>
   </div>
 </div>
 
@@ -359,7 +359,11 @@
 
       <p align="justify">
         <ul>
-          <li> TBA </li>
+          <li> In collaboration with the Special Task Force of the Government of Punjab, me and my team developed an Android application for the Drug Abuse Prevention Officer (DAPO) Program, in order to combat the drug problem in the state of Punjab. </li>
+          <li> The application served as an information retrieval platform with role-based accessiblity to the information provided by volunteers, police officers and general civilians alike.</li>
+          <li> For each locality, the app also shows the current status of the known population as illustrated in the image.</li>
+          <li> The app was developed in Java with the data being stored in a remote server housed in the Govt. of Punjab's IT HQ.</li>
+          
         </ul>
       </p>
 
