--- a/project/dapo/index.html
+++ b/project/dapo/index.html
@@ -358,7 +358,7 @@
     <div class="article-style">
 
       <p align="justify">
-        <ul>
+        <ul align="justify"> 
           <li> In collaboration with the Special Task Force of the Government of Punjab, me and my team developed an Android application for the Drug Abuse Prevention Officer (DAPO) Program, in order to combat the drug problem in the state of Punjab. </li>
           <li> The application served as an information retrieval platform with role-based accessiblity to the information provided by volunteers, police officers and general civilians alike.</li>
           <li> For each locality, the app also shows the current status of the known population as illustrated in the image.</li>
