--- a/project/penn_cloud/index.html
+++ b/project/penn_cloud/index.html
@@ -899,7 +899,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 396px;">
   <div style="position: relative">
-    <img src="/project/penn_cloud/featured_hub722a5226094e4de10fb8e9257a475ab_713812_720x2500_fit_q75_h2_lanczos_3.webp" width="720" height="396" alt="" class="featured-image">
+    <img src="/project/penn_cloud/featured.jpg" width="720" height="396" alt="" class="featured-image">
     <span class="article-header-caption">PennCloud</span>
   </div>
 </div>
