--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
             
                   <a href="/project/penn_cloud/" >
                     <div class="img-hover-zoom">
-                      <img src="/project/penn_cloud/featured_hub722a5226094e4de10fb8e9257a475ab_713812_808x455_fill_q75_h2_lanczos_smart1_3.webp" height="455" width="808"
+                      <img src="/project/penn_cloud/banner.jpg" height="455" width="808"
                            class="article-banner" alt="PennCloud" loading="lazy">
                     </div>
                   </a>
