--- a/project/penn_cloud/index.html
+++ b/project/penn_cloud/index.html
@@ -280,8 +280,8 @@
   
 
   
-  <link rel="icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_32x32_fill_lanczos_center_3.png" />
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu9eeb12546e8517e7f9c186d851ae3ad9_1969_180x180_fill_lanczos_center_3.png" />
+  <link rel="icon" type="image/png" href="/media/icon.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon.png" />
 
   <link rel="canonical" href="https://harbarex.github.io/project/penn_cloud/" />
 
