--- a/project/computer_graphics/index.html
+++ b/project/computer_graphics/index.html
@@ -400,8 +400,11 @@
 
       <p align="justify">
         <ul align="justify">
-          <li>Developed a mini-minecraft with various features including procedural generation of terrain, efficient storing and rendering of blocks, player physics, multi-threaded terrain loading, 
-            texturing and animation, procedurally-generated caves, day and night cycles, distance fog, dynamic clouds, inventory, water waves, sounds, L-system rivers and NPC AI.</li>
+          <li> Developed a full fledged custom Minecraft-like Open World Game from scratch in C++.</li>
+          <li> Implemented a Multi-threaded Chunk-based Procedural Terrain Generation algorithm, using 2D & 3D Perlin Noise. </li>
+          <li> Generated 5 different biomes with efficient rendering techniques, each with individual fluid simulation overlays and animations.</li>
+          <li> Generated rivers and trees using L-Systems, along with implementing dynamic sounds and player physics.</li>
+          <li> Implemented AI models for NPCs with real time inter-NPC interactions and world exploration paths.</li>
         </ul>
       </p>
 
