--- a/project/computer_graphics/index.html
+++ b/project/computer_graphics/index.html
@@ -400,7 +400,7 @@
 
       <p align="justify">
         <ul align="justify">
-          <li> Developed a full fledged custom Minecraft-like Open World Game from scratch in C++.</li>
+          <li> Developed a custom Minecraft-like Open World Game from scratch in C++.</li>
           <li> Implemented a Multi-threaded Chunk-based Procedural Terrain Generation algorithm, using 2D & 3D Perlin Noise. </li>
           <li> Generated 5 different biomes with efficient rendering techniques, each with individual fluid simulation overlays and animations.</li>
           <li> Generated rivers and trees using L-Systems, along with implementing dynamic sounds and player physics.</li>
