--- a/project/streamworks/index.html
+++ b/project/streamworks/index.html
@@ -345,6 +345,7 @@
 
 <div class="btn-links mb-3">
 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/harbarex/streamworks-search-engine" target="_blank" rel="noopener">Code</a>
   <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://drive.google.com/file/d/1MUGOqiXdYXFaLmc5uqEIEGo0P6_Z1A4S/view?usp=sharing" target="_blank" rel="noopener">PDF</a>
 
 </div>
