--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">M.S.E in Computer and Information Science, 2023</p>
+              <p class="course">M.S.E in Computer and Information Science</p>
               <p class="institution">University of Pennsylvania</p>
             </div>
           </li>
@@ -681,7 +681,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">B. Tech. in Computer Science and Engineering, 2021</p>
+              <p class="course">B. Tech. in Computer Science and Engineering</p>
               <p class="institution">Punjab Engineering College, Chandigarh</p>
             </div>
           </li>
