Update role to Sauron

--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
 
         <h2>Ankit Billa</h2>
 
-        <h3>Computer Vision Engineer</h3>
+        <h3>Senior Perception Engineer</h3>
 
         
         <h3>
-          <a href="https://www.dragonfruit.ai/" target="_blank" rel="noopener">
-          <span>Dragonfruit AI</span>
+          <a href="https://www.sauron.systems/" target="_blank" rel="noopener">
+          <span>Sauron</span>
           </a>
         </h3>
         
